--- a/html/about.html
+++ b/html/about.html
@@ -116,22 +116,24 @@
         <!-- Footer -->
         <div class="about-footer">
             <!-- Social Media Links -->
-            <div>
-                <a class="social-icon" href="https://www.facebook.com/zach.schelin.98" target="_blank">
-                    <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-                <a class="social-icon" href="https://www.instagram.com/z_schillin/" target="_blank">
-                    <ion-icon name="logo-instagram"></ion-icon>
-                </a>
-                <a class="social-icon" href="https://twitter.com/ZachSchelin" target="_blank">
-                    <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-                <a class="social-icon" href="https://www.linkedin.com/in/zach-schelin-379b37226/" target="_blank">
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-            </div>
-            <div style="color:#212529" class="small text-center text-muted fst-italic">Copyright &copy; Zach Schelin 2022</div>
-        </div> 
+        <footer>
+                <div>
+                    <a class="social-icon" href="https://www.facebook.com/zach.schelin.98" target="_blank">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+                    <a class="social-icon" href="https://www.instagram.com/z_schillin/" target="_blank">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                    <a class="social-icon" href="https://twitter.com/ZachSchelin" target="_blank">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/zach-schelin-379b37226/" target="_blank">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                </div>
+                <div style="color:#212529" class="small text-center text-muted fst-italic">Copyright &copy; Zach Schelin 2022</div>
+            </div> 
+        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
