--- a/html/Resume.html
+++ b/html/Resume.html
@@ -136,7 +136,8 @@
                     <ul>
                         <li>Presided over all student council planning and activities and the management of the annual budget, including humanitarian projects, charity fundraisers, student events, and more.</li>
                         <li>Spoke at the graduation ceremony of the Wakeland High School class of 2019</li>
-                    </ul>       
+                    </ul>   
+                    <br>    
             <!-- Youtube Video -->
             <div  class="common videobox">Watch My Graduation Speech Below! 
                 <iframe width="710" height="375" src="https://www.youtube.com/embed/HkIEIZvBA4c?start=7236" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -161,7 +162,7 @@
                         <br>
                     <ul>
                         <li>Fluent in Brazilian Portuguese, and currently pursuing an ACTFL-recognized language certificate</li>
-                        <li>Distringuished Eagle Scout, Boy Scouts of America</li>
+                        <li>Distinguished Eagle Scout, Boy Scouts of America</li>
                         <li>State Finalist in the DECA Independent Business Plan Event- 2018</li>
                         <Li>Entrepreneurship Student of the Year- 2018</Li>
                         <li>Technical Experience in Information Systems
