--- a/html/tableau.html
+++ b/html/tableau.html
@@ -59,7 +59,7 @@
                 <h7 class="custom3">Forecasts predict that sales will rise steadily through November 2015.</h7>
         </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p>&nbsp;</p>
     <!-- Footer -->
     <footer class="common tableau-footer tabflex">
             <!-- Social Links -->
