--- a/html/Resume.html
+++ b/html/Resume.html
@@ -75,6 +75,7 @@
                                 <a href="#L&S">➤ Leadership and Service</a></h6>
                             <h6>
                                 <a href="#ASI">➤ Awards, Skills, & Interests</a></h6>
+                        <!-- Resume Info -->
                         <a id="EDU"></a>
                         <h1 style="color: #e66952;" class="section-heading">Education</h1>
                             <hr class="solid">
